Fix info grid scroll at bottom on mobile

--- a/korean-handbook/src/components/App/App.scss
+++ b/korean-handbook/src/components/App/App.scss
@@ -285,6 +285,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  margin-bottom: 2em;
   padding: 0;
   .grid-header {
     font-weight: $medium-weight;
